[project]
name = "plantangenet"
version = "0.1.0"
description = "Distributed music simulation framework"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio",
    "pytest-asyncio",
    "pydantic",
    "pytest",
    "redis",
    "nats-py",
    "rich",
    "python-ulid",
    "aiohttp==3.11.10",
    "thorpy",
    "numpy",
    "pillow",
    "coolname",
    "pandas",
    "pytest-cov"
]

[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["plantangenet"]
